@@ -18,8 +18,10 @@ package org.springframework.oxm.jaxb;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.util.Map;
 
 import javax.xml.XMLConstants;
+import javax.xml.bind.JAXBContext;
 import javax.xml.bind.JAXBException;
 import javax.xml.bind.Marshaller;
 import javax.xml.bind.Unmarshaller;
@@ -31,16 +33,21 @@ import javax.xml.validation.SchemaFactory;
 import org.xml.sax.SAXException;
 
 import org.springframework.core.io.Resource;
+import org.springframework.util.ClassUtils;
 import org.springframework.util.ObjectUtils;
+import org.springframework.util.StringUtils;
 
 /**
  * Implementation of the <code>Marshaller</code> interface for JAXB 2.0.
  * <p/>
- * The typical usage will be to set the <code>contextPath</code> property on this bean, possibly customize the
- * marshaller and unmarshaller by setting properties, schemas, adapters, and listeners, and to refer to it.
+ * The typical usage will be to set either the <code>contextPath</code> or the <code>classesToBeBound</code> property on
+ * this bean, possibly customize the marshaller and unmarshaller by setting properties, schemas, adapters, and
+ * listeners, and to refer to it.
  *
  * @author Arjen Poutsma
  * @see #setContextPath(String)
+ * @see #setClassesToBeBound(Class[])
+ * @see #setJaxbContextProperties(java.util.Map)
  * @see #setMarshallerProperties(java.util.Map)
  * @see #setUnmarshallerProperties(java.util.Map)
  * @see #setSchema(org.springframework.core.io.Resource)
@@ -63,12 +70,34 @@ public class Jaxb2Marshaller extends AbstractJaxbMarshaller {
 
     private Schema schema;
 
+    private Class[] classesToBeBound;
+
+    private Map jaxbContextProperties;
+
+    /**
+     * Sets the <code>JAXBContext</code> properties. These implementation-specific properties will be set on the
+     * <code>JAXBContext</code>.
+     */
+    public void setJaxbContextProperties(Map jaxbContextProperties) {
+        this.jaxbContextProperties = jaxbContextProperties;
+    }
+
     /**
      * Sets the <code>XmlAdapter</code>s to be registered with the JAXB <code>Marshaller</code> and
      * <code>Unmarshaller</code>
      */
     public void setAdapters(XmlAdapter[] adapters) {
         this.adapters = adapters;
+    }
+
+    /**
+     * Sets the list of java classes to be recognized by a newly created JAXBContext. Setting this property or
+     * <code>contextPath</code> is required.
+     *
+     * @see #setContextPath(String)
+     */
+    public void setClassesToBeBound(Class[] classesToBeBound) {
+        this.classesToBeBound = classesToBeBound;
     }
 
     /**
@@ -109,37 +138,6 @@ public class Jaxb2Marshaller extends AbstractJaxbMarshaller {
         this.unmarshallerListener = unmarshallerListener;
     }
 
-    protected void afterJaxbContextCreated() throws IOException, SAXException {
-        if (JaxbUtils.getJaxbVersion() < JaxbUtils.JAXB_2) {
-            throw new IllegalStateException(
-                    "Cannot use Jaxb2Marshaller in combination with JAXB 1.0. Use Jaxb1Marshaller instead.");
-        }
-        if (!ObjectUtils.isEmpty(schemaResources)) {
-            SchemaFactory schemaFactory = SchemaFactory.newInstance(schemaLanguage);
-            StreamSource[] schemaSources = new StreamSource[schemaResources.length];
-            try {
-                for (int i = 0; i < schemaResources.length; i++) {
-                    Resource schemaResource = schemaResources[i];
-                    if (logger.isDebugEnabled()) {
-                        logger.debug("Setting validation schema to " + schemaResource);
-                    }
-                    schemaSources[i] = new StreamSource(schemaResource.getInputStream());
-                }
-                schema = schemaFactory.newSchema(schemaSources);
-            }
-            finally {
-                for (int i = 0; i < schemaSources.length; i++) {
-                    if (schemaSources[i] != null) {
-                        InputStream inputStream = schemaSources[i].getInputStream();
-                        if (inputStream != null) {
-                            inputStream.close();
-                        }
-                    }
-                }
-            }
-        }
-    }
-
     protected void initJaxbMarshaller(Marshaller marshaller) throws JAXBException {
         if (schema != null) {
             marshaller.setSchema(schema);
@@ -168,4 +166,68 @@ public class Jaxb2Marshaller extends AbstractJaxbMarshaller {
         }
     }
 
+    protected JAXBContext createJaxbContext() throws Exception {
+        if (JaxbUtils.getJaxbVersion() < JaxbUtils.JAXB_2) {
+            throw new IllegalStateException(
+                    "Cannot use Jaxb2Marshaller in combination with JAXB 1.0. Use Jaxb1Marshaller instead.");
+        }
+        JAXBContext jaxbContext;
+        if (StringUtils.hasLength(getContextPath())) {
+            if (logger.isInfoEnabled()) {
+                logger.info("Creating JAXBContext with context path [" + getContextPath() + "]");
+            }
+            if (jaxbContextProperties != null) {
+                jaxbContext = JAXBContext
+                        .newInstance(getContextPath(), ClassUtils.getDefaultClassLoader(), jaxbContextProperties);
+            }
+            else {
+                jaxbContext = JAXBContext.newInstance(getContextPath());
+            }
+        }
+        else if (!ObjectUtils.isEmpty(classesToBeBound)) {
+            if (logger.isInfoEnabled()) {
+                logger.info("Creating JAXBContext with classes to be bound [" +
+                        StringUtils.arrayToCommaDelimitedString(classesToBeBound) + "]");
+            }
+            if (jaxbContextProperties != null) {
+                jaxbContext = JAXBContext.newInstance(classesToBeBound, jaxbContextProperties);
+            }
+            else {
+                jaxbContext = JAXBContext.newInstance(classesToBeBound);
+            }
+        }
+        else {
+            throw new IllegalArgumentException("setting either contextPath or classesToBeBound is required");
+        }
+        createSchema();
+
+        return jaxbContext;
+    }
+
+    private void createSchema() throws IOException, SAXException {
+        if (!ObjectUtils.isEmpty(schemaResources)) {
+            SchemaFactory schemaFactory = SchemaFactory.newInstance(schemaLanguage);
+            StreamSource[] schemaSources = new StreamSource[schemaResources.length];
+            try {
+                for (int i = 0; i < schemaResources.length; i++) {
+                    Resource schemaResource = schemaResources[i];
+                    if (logger.isDebugEnabled()) {
+                        logger.debug("Setting validation schema to " + schemaResource);
+                    }
+                    schemaSources[i] = new StreamSource(schemaResource.getInputStream());
+                }
+                schema = schemaFactory.newSchema(schemaSources);
+            }
+            finally {
+                for (int i = 0; i < schemaSources.length; i++) {
+                    if (schemaSources[i] != null) {
+                        InputStream inputStream = schemaSources[i].getInputStream();
+                        if (inputStream != null) {
+                            inputStream.close();
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
